[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credvault"
version = "1.0.0"
description = "Secure offline credential vault for red-team operations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sunderland Security"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Security",
    "Topic :: Security :: Cryptography"
]

dependencies = [
    "click>=8.1.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "pyperclip>=1.8.0",
    "pynacl>=1.5.0",
    "tabulate>=0.9.0",
]

[project.scripts]
credvault = "credvault.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["credvault*"]